client/src/styles/pages/_home.scss
@use "../utilities/variables" as *;
@use "../utilities/mixins" as *;
@use "sass:color";

.home-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: $white-color;
  padding: $padding-section;

  .home-header {
    text-align: center;

    .home-title {
      font-size: $font-size-title;
      font-weight: 400;
    }

    .home-subtitle {
      font-size: $font-size-subtitle;
      margin-top: $gap-small;
    }

    .home-buttons {
      margin: $gap-medium 0 $gap-large;
      @include flex-center(row, $gap-small);

      .btn-primary {
        @include button-style($primary-btn-bg, $white-color, $border-radius-large);
        flex: 1;
        padding: $gap-small $gap-medium;
      }

      .btn-secondary {
        @include hover-effect($secondary-btn-hover);
        flex: 1;
        padding: $gap-small $gap-medium;
        border-radius: $border-radius-large;
        cursor: pointer;
      }
    }
  }

  .how-it-works {
    background-color: $primary-bg-color;
    padding: $padding-section;
    margin: 0 auto;
    border-radius: $border-radius-small;
    width: 90%;
    max-width: 500px;

    .section-title {
      text-align: left;
      font-size: $font-size-section-title;
      margin-bottom: $gap-medium;
      font-weight: 400;
    }

    .steps-container {

      .step {
        text-align: center;
        margin: 1rem 0;

        .step-icon {
          width: 30px;
          height: auto;
          margin-bottom: $gap-small;
        }

        .step-title {
          font-size: $font-size-step-title;
          font-weight: bold;
        }

        .step-description {
          font-size: $font-size-step-description;
        }
      }
    }
  }
}

@media (min-width: 768px) {
  .home-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    gap: $gap-large;

    .home-header {
      grid-column: 1 / 2;
      grid-row: 1 / 2;
      text-align: left;
      margin-top: 6rem;
    }

    .how-it-works {
      grid-column: 2 / 3;
      grid-row: 1 / 2;
    }
  }
}

@media (min-width: 1024px) {
  .home-container {
    padding: 0 3rem;

    .home-header {
      .home-title {
        font-size: 4rem;
        font-weight: 500;
      }

      .home-subtitle {
        font-size: 1.8rem;
      }

      .home-buttons {
        max-width: 400px;
        height: 50px;

        .btn-primary,
        .btn-secondary {
          padding: 0.75rem 1.5rem;
          font-size: 1rem;
          border-radius: 30px;
        }
      }
    }

    .how-it-works {
      padding: 2rem;
      border-radius: 15px;

      .steps-container {
        .step {
          @include flex-left(row, $gap-medium);
          margin: 1rem 0;

          .step-icon {
            width: 45px;
          }

          .step-content {
            display: flex;
            flex-direction: column;
            width: 230px;

            .step-title {
              font-size: $font-size-step-title;
              margin-bottom: $gap-small;
              text-align: left;
            }

            .step-description {
              font-size: $font-size-step-description;
              text-align: left;
            }
          }
        }
      }
    }
  }
}

